PR for Issue 217 Missing border-bottom on all dropdown fields in Site Settings > Site Behavior > DEFAULT PAGES (#218)
* 2.0.6

* New build

* Releasing version 2.0.7 of the DNN React Common Library

* Releasing version 2.0.8 of the DNN React Common Library

* Releasing version 2.0.9 of the DNN React Common Library

* Set border to 0 to fix display issue

* Set visibility css attribute based on open or collapsed.

--- a/src/PermissionGrid/RoleGroupFilter/style.less
+++ b/src/PermissionGrid/RoleGroupFilter/style.less
@@ -46,7 +46,8 @@
         -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
         -moz-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
         box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.2);
-        border: 1px solid transparent;
+        border: 0px;
+        visibility: hidden;
     }
     .page-picker-content {
         >div {
@@ -166,6 +167,7 @@
             background: @white;
             border: 1px solid @alto;
             margin-top: 3px;
+            visibility: visible;
         }
         &.with-border {
             border: 1px solid @curiousBlue;
